--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,20 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: secret
+          POSTGRES_DB: simple_bank
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
@@ -19,6 +33,9 @@ jobs:
         with:
           go-version: 1.18
         id: setup-go
+
+      - name: Run Migrations
+        run: make migrateup
 
       - name: Test
         run: make test
